# PykeRemake

./: .gitignore  CMakeLists.txt  README.md  todo.md
src/: Defines.h  Vk_CI.hpp  Vk_Lib.hpp  Vk_Viewer.hpp  Vk_ViewerLib.hpp
src/application/: Vk_Device.cpp  Vk_Device.h  Vk_Device.hpp  Vk_DeviceLib.hpp  Vk_DeviceQueue.hpp  Vk_Instance.hpp  Vk_LogicalDevice.hpp  Vk_LogicalDeviceLib.hpp  Vk_LogicalDeviceQueue.hpp  Vk_LogicalDeviceQueueLib.hpp  Vk_PhysicalDevice.hpp  Vk_PhysicalDeviceLib.hpp  Vk_PhysicalDeviceMemory.hpp  Vk_PhysicalDeviceMemoryLib.hpp  Vk_PhysicalDeviceQueue.hpp  Vk_PhysicalDeviceQueueLib.hpp  Vk_Queue.hpp  Vk_Surface.hpp
src/application/gpu_tasks/: Vk_GpuTask.hpp  Vk_GpuTaskLib.hpp  Vk_GpuTaskPool.hpp  Vk_Queue.hpp
src/buffers/: Vk_DataBuffer.hpp  Vk_DataBufferLib.hpp  Vk_Structures.hpp  Vk_UniformBuffer.hpp
src/cameras/: I_Layout.hpp  I_ViewerSteering.hpp  Vk_Camera.hpp  Vk_CameraLib.hpp  Vk_LayoutGrid.hpp  Vk_ViewerSteeringLib.hpp  Vk_ViewerSteering_CameraCentric.hpp  Vk_ViewerSteering_ObjectCentric.hpp
src/cpu_actions/: Vk_ActionPool.hpp
src/lwws_win/: lwws_win.hpp  main.cpp
src/lwws_win/include/: lwws_func.hpp  lwws_key.hpp  lwws_key_wayland.hpp  lwws_key_win.hpp  lwws_key_x11.hpp  lwws_viewport.hpp  lwws_window.hpp  lwws_window_wayland.hpp  lwws_window_win.hpp  lwws_window_x11.hpp
src/renderer/: I_Renderer.hpp
src/tasks/: Vk_Action.hpp  Vk_Actions.hpp  Vk_GpuTask.hpp  Vk_Task.hpp  Vk_TaskOwner.hpp
src/utils/: Ut_Colors.hpp  Ut_Logger.hpp  Ut_Std.hpp  Ut_Utils.hpp
tests/: .gitignore  test_data.hpp  test_transformations.cpp  test_utilities.hpp  vk5_test_all.cpp  vk5_test_data_buffers.cpp  vk5_test_device.cpp  vk5_test_terminal_colors.cpp  vk5_test_viewer.cpp
